# F9ML_diffusion

./: .gitignore  pyproject.toml  requirements.txt
ml/: higgs_dataset.py
ml/classifiers/: README.md
ml/classifiers/models/: binary_model.py  multilabel_model.py
ml/common/data_utils/: PITtest.ipynb  data_modules.py  downloadutils.py  feature_scaling.py  gauss_rank_scaler.py  prob_int_transform.py  prob_int_transfrom.py  processors.py  syn_datacreator.py
ml/common/nn/: gen_model_sampler.py  mlp.py  modules.py  netron_vis.py  positional_emb.py  unet.py
ml/common/stats/: c2st.py  distances.py  two_sample_tests.py
ml/common/utils/: loggers.py  picklers.py  plot_utils.py  register_model.py  utils.py
ml/custom/higgs/: c2st.py  ddpmsamplingtest.py  distances.py  distances_plot.py  higgs_dataset.py  hydratest.py  main_EDM.py  main_EDM2.py  main_NCNS.py  main_c2st.py  main_classifier.py  main_ddpm.py  main_ddpm_Lold.py  main_ddpm_old.py  main_iddpm.py  process_higgs_dataset.py  roc_plot.py  scalertest.py  sigbkg_anal.py  sigbkg_plots.py  tail_ratio_c2st_plot.py  test.py
ml/custom/higgs/analysis/: c2st_tests.py  c2st_train_perf.py  utils.py  (+1 more)
ml/diffusion/: trackers.py
ml/diffusion/EDM/: lightning_EDM.py  lightning_EDM2.py  losses.py  main_EDM_testrun.ipynb  model.py  samplers.py  torch_utils.py
ml/diffusion/ddpm/: diffusers.py  lightning_ddpm.py  losses.py  main_syn_data.ipynb  model.py  samplers.py
ml/diffusion/score/: langevin_dynamics.py  layers.py  lightning_score.py  main_NCNS_testrun.ipynb  model.py  score_matching.py  trainNCSNtest.py
ppt/: recap1.pptx
(+33 files in other folders)
